--- a/admissions.html
+++ b/admissions.html
@@ -623,4 +623,12 @@
     </footer>
   </body>
   <script src="./script.js"></script>
+   <script>
+  const menuToggle = document.getElementById("menu-toggle");
+  const mobileMenu = document.getElementById("mobile-menu");
+
+  menuToggle.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
 </html>
