--- a/announcement.html
+++ b/announcement.html
@@ -460,5 +460,13 @@
         });
       });
     </script>
+     <script>
+  const menuToggle = document.getElementById("menu-toggle");
+  const mobileMenu = document.getElementById("mobile-menu");
+
+  menuToggle.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
   </body>
 </html>
