updated mobile navbar

--- a/admininstrator.html
+++ b/admininstrator.html
@@ -200,7 +200,7 @@
             onclick="toggleMobileDropdown()"
             class="w-full text-left hover:text-accent flex justify-between items-center"
           >
-            Academics
+            About
             <svg
               id="mobile-arrow"
               class="w-4 h-4"
