--- a/admissions.html
+++ b/admissions.html
@@ -112,7 +112,7 @@
     <div class="bg-primary text-white text-center py-2 font-semibold hidden lg:block">
       <p>MBA TWINNING PROGRAM</p>
     </div>
-     <div class="bg-primary sticky top-0 z-[9999]">
+  <div class="bg-primary sticky top-0 z-[9999]">
       <!-- Desktop Nav -->
       <nav
         class="hidden sticky lg:flex justify-end mx-auto bg-primary w-[80%] text-white py-8 text-sm font-medium space-x-6"
@@ -199,7 +199,7 @@
             onclick="toggleMobileDropdown()"
             class="w-full text-left hover:text-accent flex justify-between items-center"
           >
-            Academics
+            About
             <svg
               id="mobile-arrow"
               class="w-4 h-4"
