--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@
 
       <!-- Desktop Nav -->
     </header>
-    <div class="bg-primary text-white text-center py-2 font-semibold hidden lg:block">
+    <div
+      class="bg-primary text-white text-center py-2 font-semibold hidden lg:block"
+    >
       <p>MBA TWINNING PROGRAM</p>
     </div>
-     <div class="bg-primary sticky top-0 z-[9999]">
+    <div class="bg-primary sticky top-0 z-[9999]">
       <!-- Desktop Nav -->
       <nav
         class="hidden sticky lg:flex justify-end mx-auto bg-primary w-[80%] text-white py-8 text-sm font-medium space-x-6"
@@ -198,7 +200,7 @@
             onclick="toggleMobileDropdown()"
             class="w-full text-left hover:text-accent flex justify-between items-center"
           >
-            Academics
+            About
             <svg
               id="mobile-arrow"
               class="w-4 h-4"
@@ -269,15 +271,15 @@
       </nav>
     </div>
 
-<script>
-  function toggleMobileDropdown() {
-    const dropdown = document.getElementById('mobile-academics-dropdown');
-    const arrow = document.getElementById('mobile-arrow');
-    dropdown.classList.toggle('hidden');
-    arrow.classList.toggle('transform');
-    arrow.classList.toggle('rotate-180');
-  }
-</script>
+    <script>
+      function toggleMobileDropdown() {
+        const dropdown = document.getElementById("mobile-academics-dropdown");
+        const arrow = document.getElementById("mobile-arrow");
+        dropdown.classList.toggle("hidden");
+        arrow.classList.toggle("transform");
+        arrow.classList.toggle("rotate-180");
+      }
+    </script>
 
     <section
       id="home"
@@ -416,15 +418,23 @@
 
           <!-- Right Column: Content -->
           <div class="md:w-1/2">
-  <h3 class="text-2xl font-semibold text-secondary mb-4">
-    A Pioneering Collaboration
-  </h3>
-  <p class="text-gray-700 mb-4">
-    St. Joseph's College Society and Pondicherry Central University jointly offer high quality MBA Twinning programme with specialization in Marketing, finance. HRM, International Business and General for all degree holders including office goers. The marked difference between the conventional distance education programme and this Twinning programme is that the students of twinning programme would undergo a serious extended class room interactive sessions handled by including industry experts on Sundays. Next to Loyola College (Chennai), St. Joseph's College is the only college in Tamilnadu authorized by the Pondicherry University to conduct the Twinning Programme.
-  </p>
-
- 
-</div>
+            <h3 class="text-2xl font-semibold text-secondary mb-4">
+              A Pioneering Collaboration
+            </h3>
+            <p class="text-gray-700 mb-4">
+              St. Joseph's College Society and Pondicherry Central University
+              jointly offer high quality MBA Twinning programme with
+              specialization in Marketing, finance. HRM, International Business
+              and General for all degree holders including office goers. The
+              marked difference between the conventional distance education
+              programme and this Twinning programme is that the students of
+              twinning programme would undergo a serious extended class room
+              interactive sessions handled by including industry experts on
+              Sundays. Next to Loyola College (Chennai), St. Joseph's College is
+              the only college in Tamilnadu authorized by the Pondicherry
+              University to conduct the Twinning Programme.
+            </p>
+          </div>
         </div>
 
         <!-- Stats Counter -->
@@ -451,79 +461,95 @@
 
     <!-- Program Highlights -->
     <section id="program" class="py-16 bg-white">
-  <div class="container mx-auto px-4">
-    <h2 class="text-3xl font-bold text-center text-primary mb-12">
-      Programme Highlights
-    </h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <!-- Highlight 1 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-user-graduate"></i>
-        </div>
-        <h3 class="text-xl font-semibold mb-2">Open Eligibility</h3>
-        <p>
-          Any Degree holders can apply - working professionals, teachers, and students. No Age Limit.
-        </p>
-      </div>
+      <div class="container mx-auto px-4">
+        <h2 class="text-3xl font-bold text-center text-primary mb-12">
+          Programme Highlights
+        </h2>
+        <div class="grid md:grid-cols-3 gap-8">
+          <!-- Highlight 1 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-user-graduate"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Open Eligibility</h3>
+            <p>
+              Any Degree holders can apply - working professionals, teachers,
+              and students. No Age Limit.
+            </p>
+          </div>
 
-      <!-- Highlight 2 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-calendar-day"></i>
-        </div>
-        <h3 class="text-xl font-semibold mb-2">Weekend Classes</h3>
-        <p>
-          Classes conducted only on Sundays (8:30 AM to 1:30 PM) at St. Joseph's College Campus.
-        </p>
-      </div>
+          <!-- Highlight 2 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-calendar-day"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Weekend Classes</h3>
+            <p>
+              Classes conducted only on Sundays (8:30 AM to 1:30 PM) at St.
+              Joseph's College Campus.
+            </p>
+          </div>
 
-      <!-- Highlight 3 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-university"></i>
-        </div>
-        <h3 class="text-xl font-semibold mb-2">Dual Institutional Excellence</h3>
-        <p>
-          Degree awarded by Pondicherry University (Central University) with classes and examinations conducted by St. Joseph's College.
-        </p>
-      </div>
+          <!-- Highlight 3 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-university"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">
+              Dual Institutional Excellence
+            </h3>
+            <p>
+              Degree awarded by Pondicherry University (Central University) with
+              classes and examinations conducted by St. Joseph's College.
+            </p>
+          </div>
 
-      <!-- Highlight 4 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-chalkboard-teacher"></i>
-        </div>
-        <h3 class="text-xl font-semibold mb-2">Expert Faculty</h3>
-        <p>
-          Best teaching by highly qualified St. Joseph's faculty, Trichy experts, and industry professionals.
-        </p>
-      </div>
+          <!-- Highlight 4 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-chalkboard-teacher"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Expert Faculty</h3>
+            <p>
+              Best teaching by highly qualified St. Joseph's faculty, Trichy
+              experts, and industry professionals.
+            </p>
+          </div>
 
-      <!-- Highlight 5 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-book"></i>
-        </div>
-        <h3 class="text-xl font-semibold mb-2">Library Access</h3>
-        <p>
-          Full library facility available for twinning programme students.
-        </p>
-      </div>
+          <!-- Highlight 5 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-book"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Library Access</h3>
+            <p>
+              Full library facility available for twinning programme students.
+            </p>
+          </div>
 
-      <!-- Highlight 6 -->
-      <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition">
-        <div class="text-accent text-4xl mb-4">
-          <i class="fas fa-clock"></i>
+          <!-- Highlight 6 -->
+          <div
+            class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition"
+          >
+            <div class="text-accent text-4xl mb-4">
+              <i class="fas fa-clock"></i>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Admission Policy</h3>
+            <p>Admission strictly on FIRST COME FIRST SERVED basis.</p>
+          </div>
         </div>
-        <h3 class="text-xl font-semibold mb-2">Admission Policy</h3>
-        <p>
-          Admission strictly on FIRST COME FIRST SERVED basis.
-        </p>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Benefits -->
     <section id="benefits" class="py-16 bg-gray-50">
